feat(auth): add forget-password and logout handler
